cleanup: move SpliceSinglePlatform into same package as SpliceTestPlatform, document, remove unused code, reuse coprocessor configuration, remove unused variables in functions.sh